音声選択の追加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Alarm</string>
     <string name="text">text</string>
     <string name="Time">目覚まし設定</string>
+    <string name="TimeName">アラームの名前</string>
     <string name="Timestart">時間の設定</string>
     <string name="calender">メモ</string>
     <string name="niti">日</string>
@@ -12,4 +13,8 @@
     <string name="kin">金</string>
     <string name="dou">土</string>
     <string name="kakunin">選択した曜日</string>
+    <string name="AlarmMusic">アラーム音声</string>
+    <string name="AfterMusic">起床後の音声</string>
+    <string name="setAlarmName">選択したアラーム音</string>
+    <string name="setAfterMusicName">選択した音声</string>
 </resources>
