--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="setAlarmName">選択したアラーム音</string>
     <string name="setAfterMusicName">選択した音声</string>
     <string name="save">保存</string>
+    <string name="delete">削除する</string>
 </resources>
